--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 python-telegram-bot = "^12.8"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
