--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-telegram-bot = "^12.8"
 pytest = "^6.1.0"
 pytest-cov = "^2.10.1"
 taskipy = "^1.3.0"
+codecov = "^2.1.9"
 
 [tool.taskipy.tasks]
 bot = "roomie_bot/bot.py"
