--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,9 @@ taskipy = "^1.3.0"
 codecov = "^2.1.9"
 
 [tool.taskipy.tasks]
-bot = "roomie_bot/bot.py"
-test = "pytest"
-coverage = "pytest --cov=./"
+bot = "python -m roomie_bot"
+test = "python -m pytest"
+coverage = "python -m pytest --cov=./"
 
 [build-system]
 requires = ["poetry>=0.12"]
